--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "assignment02",
   "version": "1.0.0",
   "description": "",
-  "main": "portfolio-backend/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node portfolio-backend/server.js",
-    "dev": "nodemon portfolio-backend/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
